Rozwiązania/modul5_rozwiazanie/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce-dev
  labels:
    environment: development
    project: ecommerce
    team: platform
  annotations:
    description: "Dev-env dla naszej apki"
    contact: "dev-team@company.com"
---
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce-prod
  labels:
    environment: production
    project: ecommerce
    team: platform
  annotations:
    description: "Prod-env dla naszej apki"
    contact: "prod-team@company.com"
